--- a/.gitattributes
+++ b/.gitattributes
@@ -352,7 +352,9 @@ src/org/labkey/targetedms/model/PrecursorChromInfoPlus.java -text
 src/org/labkey/targetedms/model/PrecursorComparator.java -text
 src/org/labkey/targetedms/model/QCMetricConfiguration.java -text
 src/org/labkey/targetedms/model/QCMetricExclusion.java -text
+src/org/labkey/targetedms/model/RawGuideSet.java -text
 src/org/labkey/targetedms/outliers/LevyJenningsOutliers.java -text
+src/org/labkey/targetedms/outliers/MovingRangeOutliers.java -text
 src/org/labkey/targetedms/outliers/Outliers.java -text
 src/org/labkey/targetedms/parser/AbstractAnnotation.java -text
 src/org/labkey/targetedms/parser/AnnotatedEntity.java -text
