--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,9 @@ import org.labkey.gradle.util.BuildUtils;
 dependencies
 {
    external 'com.google.protobuf:protobuf-java:3.2.0'
-   BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":server:modules:ms2", depProjectConfig: "apiCompile")
-   BuildUtils.addLabKeyDependency(project: project, config: "jspCompile", depProjectPath: ":server:modules:ms2", depProjectConfig: "apiCompile")
-   BuildUtils.addLabKeyDependency(project: project, config: "jspCompile", depProjectPath: ":server:modules:ms1", depProjectConfig: "apiCompile")
+   BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath:  BuildUtils.getCommonAssayModuleProjectPath(project.gradle, "ms2"), depProjectConfig: "apiCompile")
+   BuildUtils.addLabKeyDependency(project: project, config: "jspCompile", depProjectPath: BuildUtils.getCommonAssayModuleProjectPath(project.gradle, "ms2"), depProjectConfig: "apiCompile")
+   BuildUtils.addLabKeyDependency(project: project, config: "jspCompile", depProjectPath: BuildUtils.getCommonAssayModuleProjectPath(project.gradle, "ms1"), depProjectConfig: "apiCompile")
 
 }
 
