--- a/.gitattributes
+++ b/.gitattributes
@@ -135,6 +135,7 @@ resources/schemas/dbscripts/postgresql/targetedms-18.30-18.31.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-18.30-19.10.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-18.31-18.32.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-18.32-18.33.sql -text
+resources/schemas/dbscripts/postgresql/targetedms-19.10-19.11.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.00-12.20.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.00-12.30.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.00-13.10.sql -text
@@ -226,6 +227,7 @@ resources/schemas/dbscripts/sqlserver/targetedms-18.30-18.31.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-18.30-19.10.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-18.31-18.32.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-18.32-18.33.sql -text
+resources/schemas/dbscripts/sqlserver/targetedms-19.10-19.11.sql -text
 resources/schemas/targetedms.xml -text
 resources/unimod_NO_NAMESPACE.xml -text
 src/ChromatogramGroupData.proto -text
@@ -499,6 +501,7 @@ src/org/labkey/targetedms/query/PrecursorManager.java -text
 src/org/labkey/targetedms/query/PrecursorTableInfo.java -text
 src/org/labkey/targetedms/query/QCAnnotationTable.java -text
 src/org/labkey/targetedms/query/QCAnnotationTypeTable.java -text
+src/org/labkey/targetedms/query/QCEnabledMetricsTable.java -text
 src/org/labkey/targetedms/query/QCMetricConfigurationTable.java -text
 src/org/labkey/targetedms/query/QCMetricExclusionTable.java -text
 src/org/labkey/targetedms/query/ReplicateAnnotationTable.java -text
